--- a/css.imparPar/style.css
+++ b/css.imparPar/style.css
@@ -6,4 +6,6 @@ body {
     background-blend-mode: darken;
     display: flex;
     flex-direction: column;
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(60,60,60,1) 52%, rgba(0,0,0,1) 100%);
   }
