--- a/css.tabuada/main.css
+++ b/css.tabuada/main.css
@@ -5,7 +5,8 @@ main{
     height: 50rem;
     width: 75rem;
     margin-left: 21rem;
-    background-color: rgba(160, 160, 160, 0.667);
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(168,166,166,1) 52%, rgba(0,0,0,1) 100%);
 }
 
 #conteudo {
