--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,9 @@ main{
     height: 50rem;
     width: 75rem;
     margin-left: 21rem;
-    background-color: rgba(160, 160, 160, 0.667);
+    /* background-color: rgba(160, 160, 160, 0.667); */
+    background: rgb(0,0,0);
+    background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(168,166,166,1) 52%, rgba(0,0,0,1) 100%);
 }
 
 .menu > ul {
@@ -21,7 +23,7 @@ main{
 
   .menu a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
+    color: white;
     font-family: "Roboto", sans-serif;
     font-size: 1.5rem;
     transition: color 0.5s;
