--- a/css.media/style.css
+++ b/css.media/style.css
@@ -1,4 +1,14 @@
-
+body{
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: right top;
+  background-blend-mode: darken;
+  display: flex;
+  flex-direction: column;
+  background: rgb(0,0,0);
+  background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(60,60,60,1) 52%, rgba(0,0,0,1) 100%);
+}
 
 #conteudo{
   width: 400px;
@@ -28,6 +38,7 @@
   height: 185px;
   padding-top: 20px;
   box-sizing: border-box;
+  color: #ffffff;
 }
 
 input{
