--- a/css/header.css
+++ b/css/header.css
@@ -5,5 +5,5 @@ header {
     justify-content: center;
     align-items: center;
     padding: 0px 80px;
-    background-color: rgba(83, 83, 83, 0.667);
+    /* background-color: rgba(83, 83, 83, 0.667); */
   }
