--- a/css.media/style.css
+++ b/css.media/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body{
   width: 100vw;
   height: 100vh;
@@ -7,8 +13,9 @@ body{
   display: flex;
   flex-direction: column;
   background: rgb(0,0,0);
-  background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(60,60,60,1) 52%, rgba(0,0,0,1) 100%);
+background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(255,254,254,1) 49%, rgba(0,0,0,1) 100%);
 }
+
 
 #conteudo{
   width: 400px;
@@ -17,6 +24,7 @@ body{
   margin-right: auto;
   border: solid 1px #000000;
   text-align: center;
+  align-items: center;
 
 }
 
