--- a/css.media/style.css
+++ b/css.media/style.css
@@ -57,7 +57,7 @@ input{
 #resultado{
   width: inherit;
   height: 35px;
-  background-color: cornflowerblue;
+  background-color: #a8a6a6;
   box-sizing: border-box;
   padding-top: 2px;
   font-family: cursive;
