--- a/css.calculadora/style.css
+++ b/css.calculadora/style.css
@@ -57,7 +57,7 @@
     width: 170px;
     height: 110px;
     color: white;
-    background-color: cornflowerblue;
+    background-color: #a8a6a6;
     box-sizing: border-box;
     padding-top: 2px;
     font-family: monospace;
